--- a/sample_config.env
+++ b/sample_config.env
@@ -2,11 +2,11 @@
 
 ## COMPULSORY VARIABLES ##
 
-TG_BOT_TOKEN1 = ""
-APP_ID1 =
-API_HASH1 = ""
-OWNER_ID =
-AUTH_CHANNEL = ""
+TG_BOT_TOKEN1 = "7468556574:AAHSrlHtt1KwqKw0LcI4sasdGws5L17muRQ"
+APP_ID1 =26484988
+API_HASH1 = "8d6e625fe3e296b4b6bd4817aca39ec5"
+OWNER_ID =6888054311
+AUTH_CHANNEL = "-1002205881723"
 
 ## NON COMPULSORY VARIABLES ##
 
